# corda-p2p-cpp

./: .gitignore  CMakeLists.txt  README.md  common.cxx  config  config.json  consumer.cxx  producer.cxx  rem_cmake
example-1/: .env  CMakeLists.txt  README.md  common.cxx  config.ini  consumer.cxx  docker-compose.yml  producer.cxx
example-2/: .env  .gitignore  CMakeLists.txt  README.md  config.json  consumer.cxx  docker-compose.yml  producer.cxx
example-3/: .gitignore  CMakeLists.txt  config.json  docker-compose.yml  main.cxx  two-way
example-4/: .gitignore  CMakeLists.txt  README.md  alice.json  chip.json  corda-id  main.cxx
example-5/: .gitignore  CMakeLists.txt  json-message-writer  main.cxx
lib/: .gitignore  CMakeLists.txt  cluster1.env  cluster2.env  deploy-locally.sh  docker-compose.yml  doubleKafka.yml  start-corda.sh
lib/cluster1/: .env  docker-compose.yml
lib/cluster2/: docker-compose.yml
lib/include/: CordaAvro.h  CordaAvroDecoder.h  CordaAvroEncoder.h  CordaAvroInteralTypes.h  CordaAvroSerializable.h  CordaAvroXCoderFactory.h  Identity.h  Message.h  MessageFactory.h  X500.h  config.h  debug.h
lib/src/: .gitignore  CMakeLists.txt  CordaAvro.cxx  CordaAvroSerializable.cxx  CordaAvroSpecialisations.h  Deflator.cxx  Deflator.h  Identity.cxx  Message.cxx  MessageFactory.cxx  SchemaBuilder.cxx  SchemaBuilder.h  X500.cxx  avro-gen.py  avro-manual.h  avro.cxx  config.cxx  envelope.h  schema-gen.py
lib/test/: .gitignore  CMakeLists.txt  DeflateTests.cxx  MessageTests.cxx  RoundTripTests.cxx  X500.cxx  X500Support.cxx  X500Support.h  avro.cxx  json.cxx  main.cxx
